[gd_scene load_steps=38 format=3 uid="uid://belseh70yciui"]

[ext_resource type="Script" uid="uid://dg4hca1i84rvc" path="res://scripts/esqueleto_boss_2.gd" id="1_kl672"]
[ext_resource type="Texture2D" uid="uid://cm38idflmrb2h" path="res://Sprites/Esqueleto_frente_mov.png" id="2_14rtj"]
[ext_resource type="Texture2D" uid="uid://ba1n3jr0x6u1s" path="res://Sprites/Esqueleto_traseira_mov.png" id="3_uovkx"]
[ext_resource type="Texture2D" uid="uid://bgwl5n2ehnl20" path="res://Sprites/Esqueleto_lado_mov.png" id="4_ropb5"]
[ext_resource type="Texture2D" uid="uid://wwk4kjnfp782" path="res://Sprites/Barra_de_vida_vazia.png" id="5_wnmlp"]
[ext_resource type="Texture2D" uid="uid://dgi6348ykacpn" path="res://Sprites/Barra_de_vida_inimigo.png" id="6_jjuws"]
[ext_resource type="Script" uid="uid://c856w6kelateo" path="res://scripts/texture_progress_bar_esqueletoboss2.gd" id="7_62wx7"]
[ext_resource type="Script" uid="uid://cbijfi1ecfwqn" path="res://scripts/label_esq_boss2.gd" id="8_kwqt4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjbex"]
size = Vector2(34.28572, 62.857185)

[sub_resource type="CircleShape2D" id="CircleShape2D_kramk"]
radius = 738.584

[sub_resource type="AtlasTexture" id="AtlasTexture_7lh6t"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji4i8"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b66pk"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bm5w"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_re4gi"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey6uc"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8qh3"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7d4t"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4blyx"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2xle"]
atlas = ExtResource("2_14rtj")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmuqv"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1uxu"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdpv7"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa5hy"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cdhi"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf24i"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhjse"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl6ww"]
atlas = ExtResource("3_uovkx")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6b0a"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xopon"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc3t4"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejiu3"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s06w4"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhxg5"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmux8"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7o4s"]
atlas = ExtResource("4_ropb5")
region = Rect2(0, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6b0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lh6t")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji4i8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b66pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bm5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re4gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey6uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8qh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7d4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4blyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2xle")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1uxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdpv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa5hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cdhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf24i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhjse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl6ww")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6b0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xopon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc3t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejiu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s06w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhxg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmux8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7o4s")
}],
"loop": true,
"name": &"walk_x",
"speed": 8.0
}]

[node name="esqueleto_boss2" type="CharacterBody2D" groups=["Enemy", "enemy"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_kl672")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(-1.2772406e-06, -2.857141)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_bjbex")

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2(1.1, 1.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
show_behind_parent = true
position = Vector2(-8.9406956e-07, 0.71428573)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_bjbex")

[node name="DetectionArea" type="Area2D" parent="." groups=["enemy"]]
visible = false
scale = Vector2(0.99999994, 0.99999994)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
show_behind_parent = true
shape = SubResource("CircleShape2D_kramk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_h6b0a")
animation = &"idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1028.0
offset_top = -290.0
offset_right = 1280.0
offset_bottom = -250.0
grow_vertical = 0
max_value = 25000.0
value = 20.0
texture_under = ExtResource("5_wnmlp")
texture_progress = ExtResource("6_jjuws")
script = ExtResource("7_62wx7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/TextureProgressBar"]
layout_mode = 0
offset_left = 95.0
offset_top = -24.0
offset_right = 157.00006
offset_bottom = -1.0
text = "100/100"
script = ExtResource("8_kwqt4")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
